--- a/index.html
+++ b/index.html
@@ -4,14 +4,99 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title> página contato</title>
 
 </head>
 <body>
+    <header>
+       <!--  <nav class="nav justify-content-end nav-pills">
+            <img id="foto" src="./img/disney-plus-logo-0.png" alt="melhor pataflorma de streaming" width="150px" height="150px">
+            <a class="nav-item nav-link"href="index.html">Home</a>
+            <a class="nav-item nav-link"href="filmes.html">Filmes</a>
+            <a class="nav-item nav-link"href="séries.html">séries</a>
+            <a class="nav-item nav-link"href="jogos.html">jogos</a>    
+         </nav>     -->
 
-    <nav>
-        <a href="index.html"
-    </nav>
-   <h1></h1>
+
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Site do Rafa</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#textoNavbar" aria-controls="textoNavbar" aria-expanded="false" aria-label="Alterna navegação">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="textoNavbar">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(Página atual)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="séries.html">séries</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="filmes.html">filmes
+                  </a>
+                </li>
+              </ul>
+              <span class="navbar-text">
+                Texto navbar com um elemento inline
+              </span>
+            </div>
+          </nav>
+    </header>
+
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-80" src="img/CAPA-invocacao-do-mal_k9vySK2.jpg" alt="Primeiro Slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-80" src="img/guerra-infinita-divulgacao.jpg" alt="Segundo Slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-80" src="img/Como-Treinar-o-Seu-Dragão-3.jpg" alt="Terceiro Slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Próximo</span>
+        </a>
+      </div>
+      <div class="título">
+        <h1>Filmes e séries online</h1>
+
+      </div>
+
+      <footer>
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                uma de tres colunas
+              </div>
+              <div class="col-sm">
+                uma de tres colunas
+              </div>
+              <div class="col-sm">
+               uma tres de colunas
+              </div>
+            </div>
+          </div>
+      </footer>
+ 
+
+
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
