foram criados carousel

--- a/filmes.html
+++ b/filmes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +11,11 @@
 <body>
     <header class="container-fluid">
         <nav class="nav justify-content-end nav-pills">
-            <img id="foto" src="./img/disney-plus-logo-0.png" alt="melhor pataflorma de streaming" width="150px" height="150px">
-            <a class="nav-item nav-link" href="index.html">Home</a>
-            <a class="nav-item nav-link" href="filmes.html">Filmes</a>
-            <a class="nav-item nav-link" href="séries.html">séries</a>
-            <a class="nav-item nav-link" href="jogos.html">jogos</a>
+            <img id="foto" src="img/1b54efef3720f6ac39647fc420d4a6f9-removebg-preview (2).jpg" alt="melhor pataflorma de streaming" width="150px" height="150px">
+            <a class="nav-item nav-link" href="index.html"  style="color: red;">Home</a>
+            <a class="nav-item nav-link" href="filmes.html"   style="color: red;">Filmes</a>
+            <a class="nav-item nav-link" href="series.html" style="color: red;">series</a>
+            <a class="nav-item nav-link" href="jogos.html"  style="color: red;">jogos</a>
             
         </nav>
 
